# baselayer

./: .gitignore  CMakeLists.txt  README.md  base.c  base.h  baselayer.h  baselayer_includes.h  frametimer.h  geometry.h  hash.h  hexdata.txt  init.h  main.cpp  main_geom.cpp  memory.c  memory.h  parse_mcstas.h  parse_slconfig.h  parsers.h  perftimer.h  platform.c  platform.h  profile.c  profile.h  random.h  string.c  string.h  test.cpp  tests.h  token.h  types.h  utils.c  utils.h  various.h
algorithms/: indices.h  octree.h
archived/: frametimer.h  memory.h  tests.h  token.h
graphics/: CMakeLists.txt  atlas.h  entity.h  font.h  gameloop.h  geometry.h  graphics.h  gtypes.h  imui.h  indices.h  main_atlasgen.cpp  main_geom.cpp  octree.h  readme.md  resource.h  shaders.h  sprite.h  stream.h  swrender.h  test.cpp  ui.h
graphics/atlasgen/: alt.res  main_atlasgen.cpp  main_rescomp.cpp  main_spritegen.cpp  output.atlas  wget_dps.sh
graphics/glfw_test/: CMakeLists.txt  main_glfw.cpp  readme.md
parse_instr_example/: parse_instr.h
plaf/: plaf_linux.c  plaf_linux.cpp  plaf_win.c  plaf_win.cpp
release/0.1.0/: main.cpp
release/0.1.1/: main.cpp
release/0.2.0/: jg_baselayer.h  main.cpp
release/0.2.1/: main.cpp
release/0.2.2/: main.cpp
release/0.2.3/: main.cpp
release/0.2.4/: main.cpp
src/: base.h  baselayer.h  hash.h  init.h  memory.h  platform.h  profile.h  string.h  utils.h
